# airdao-nop-rs

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  run-update.sh  rust-toolchain  setup.sh  update.sh
.github/workflows/: build_binary_nop_x86_64.yaml
config/: default.json
setup_templates/apollo/ambnet/: docker-compose.yml
setup_templates/apollo/ambnet-dev/: docker-compose.yml
setup_templates/apollo/ambnet-test/: docker-compose.yml
src/: config.rs  contract.rs  error.rs  main.rs  messages.rs  server_node.rs  setup.rs  state.rs
src/phases/: actions_menu.rs  check_docker.rs  check_status.rs  mod.rs  select_network.rs  select_node_ip.rs  select_private_key.rs
src/setup/: docker_compose_file.rs  keystore.rs  mod.rs  parity_config_file.rs  utils.rs
src/utils/: config.rs  debug_info.rs  exec.rs  logger.rs  mod.rs
