[package]
name = "airdao-nop-rs"
version = "0.1.3"
edition = "2021"

[dependencies]
# Async
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"] }
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

# Ethereum
jsonrpc-core = "18.0.0"
web3 = { version = "0.19" }
ethers-providers = "2"
alloy = { version = "0.6.2", features = ["full", "json-rpc", "sol-types"] }
alloy-sol-types = "0.8.11"
alloy-sol-type-parser = "=0.8.11"

# Crypto
k256 = { version = "0.13" }
ecdsa = { version = "0.16" }
sha3 = "0.10"
eth-keystore = { version = "0.5", features = ["geth-compat"] }
scrypt = "0.11"
ctr = "0.9"
aes = "0.8"
cipher = "0.4"

# Web
reqwest = { version = "0.12", features = ["rustls-tls", "json", "deflate", "stream", "multipart"] }
url = { version = "2.5.2", features = ["serde"] }

# SerDe
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UI
cliclack = "0.3"
console = "0.15"

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter", "registry" ] }

# Misc
anyhow = "1.0"
backtrace = "0.3"
regex = "1.11"
strum_macros = "0.26.4"
thiserror = "1.0"
hex = "0.4"
config = { version = "0.13", default-features = false, features = ["json"] }
rand = { version = "0.8", features = ["getrandom"] }
yaml-rust2 = "0.9"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "serde",
] }
uuid = { version = "1.11", features = ["v4", "serde"] }
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
assert_matches = "1.5"

[patch.crates-io.alloy-sol-type-parser]
git = "https://github.com/ZelionD/core.git"
branch = "feature/parse-full-signature-tuples"
